--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "image-data-uri": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.3",
     "monk": "^7.1.1",
